add footer-feature patterns
Signed-off-by: Matt Lee <matthewleedesign@gmail.com>

--- a/styleguide/source/_patterns/01-molecules/08-footer-features/00-specialty-spotlight.mustache
+++ b/styleguide/source/_patterns/01-molecules/08-footer-features/00-specialty-spotlight.mustache
@@ -1,8 +1,10 @@
-<h3>Specialty Spotlight</h3>
 <div class="spotlight specialty">
-	{{>atoms-image-square}}
-	<div class="spotlight-text">
-		<h4>Oncology</h4>
-		<p>Introductory text about featured service. <a href="{{url}}">Read more...</a></p>
+	<h3>Specialty Spotlight</h3>
+	<div class="box">
+		{{>atoms-image-square}}
+		<div class="spotlight-text">
+			<h4>Oncology</h4>
+			<p>Introductory text about featured service. <a href="{{url}}">Read more...</a></p>
+		</div>
 	</div>
 </div>
