--- a/styleguide/source/_patterns/01-molecules/08-footer-features/03-previously-featured-pets.mustache
+++ b/styleguide/source/_patterns/01-molecules/08-footer-features/03-previously-featured-pets.mustache
@@ -1,6 +1,6 @@
-<h3>Previously Featured Pets</h3>
 <div class="previously-featured-pets">
-	{{# listItems.four }} <!-- repeats a pattern a given # of times -->
+	<h3>Previously Featured Pets</h3>
+	{{# listItems.eight }} <!-- repeats a pattern a given # of times -->
 		<a href="{{url}}">{{>atoms-image-circle}}</a>
-	{{/ listItems.four }}	
+	{{/ listItems.eight }}	
 </div>
