--- a/styleguide/source/_patterns/01-molecules/08-footer-features/01-did-you-know.mustache
+++ b/styleguide/source/_patterns/01-molecules/08-footer-features/01-did-you-know.mustache
@@ -1,7 +1,9 @@
-<h3>Did You Know?</h3>
 <div class="spotlight did-you-know">
-	{{>atoms-image-square}}
-	<div class="spotlight-text">
-		<p>Did you know that we also treat small animals like rabbits, ferrets, and hamsters? <a href="{{url}}">Read more...</a></p>
+	<h3>Did You Know?</h3>
+	<div class="box">
+		{{>atoms-image-square}}
+		<div class="spotlight-text">
+			<p>Did you know that we also treat small animals like rabbits, ferrets, and hamsters? <a href="{{url}}">Read more...</a></p>
+		</div>			
 	</div>
 </div>
