loads mo' patterns
Signed-off-by: Matt Lee <matthewleedesign@gmail.com>

--- a/styleguide/source/_patterns/01-molecules/01-text/05-thankyou-quote.mustache
+++ b/styleguide/source/_patterns/01-molecules/01-text/05-thankyou-quote.mustache
@@ -1,4 +1,4 @@
-<blockquote class="thank-you-quote">
+<blockquote class="thankyou-quote">
 	<p>Thank you for your extraordinary staff. They saved my cat’s life, and I am forever grateful for it.</p>
 	<cite>Jessica L.</cite>
 </blockquote>
