--- a/styleguide/source/_patterns/01-molecules/04-forms/00-basic-input-form.mustache
+++ b/styleguide/source/_patterns/01-molecules/04-forms/00-basic-input-form.mustache
@@ -1,4 +1,4 @@
-<form action="{{ url }}" method="post" class="search-form">           
+<form action="{{ url }}" method="post" class="form-group">           
 	{{>atoms-input}}
 	{{>atoms-button}}
 </form>
