--- a/styleguide/source/_patterns/01-molecules/04-forms/01-inline-form.mustache
+++ b/styleguide/source/_patterns/01-molecules/04-forms/01-inline-form.mustache
@@ -1,4 +1,4 @@
-<div class="form-group inline">
-    {{>atoms-input}}   
-    {{>atoms-button}}
-</div>
+<form action="{{ url }}" method="post" class="form-group inline">           
+	{{>atoms-input}}
+	{{>atoms-button}}
+</form>
