--- a/styleguide/source/_patterns/01-molecules/07-sidebars/00-sidebar-article.mustache
+++ b/styleguide/source/_patterns/01-molecules/07-sidebars/00-sidebar-article.mustache
@@ -1,5 +1,4 @@
 <article class="sidebar-article">
-    <h2>{{ sidebar.title }}</h2>
-    <a href="{{ url }}">{{>atoms-paragraph}}</a>
-    {{>atoms-date}}
+    <h3>{{ sidebar.title }}</h3>
+    {{>atoms-paragraph}}
 </article>
