--- a/styleguide/source/_patterns/02-organisms/01-text/00-body-text.mustache
+++ b/styleguide/source/_patterns/02-organisms/01-text/00-body-text.mustache
@@ -1,8 +1,8 @@
-<h2>{{ headline.short }}</h2>
+{{>atoms-heading-h2}}
 {{#listItems.two}}
 	{{>atoms-paragraph}}
 {{/listItems.two}}
-{{>atoms-blockquote}}
+{{>atoms-pullquote}}
 {{#listItems.one}}
 	{{>atoms-paragraph}}
 {{/listItems.one}}
