--- a/styleguide/source/_patterns/03-templates/02-services/00-services-landing.mustache
+++ b/styleguide/source/_patterns/03-templates/02-services/00-services-landing.mustache
@@ -1,3 +1,38 @@
 {{> organisms-header }}
-
+{{> organisms-hero }}
+<div class="container">
+	<section class="service-group">
+		<div class="service-intro">
+			{{>atoms-heading-h2}}
+			{{>atoms-paragraph}}
+		</div>
+		<div class="service-list">
+			{{# listItems.ten}}
+				{{>molecules-service-unit}}
+			{{/ listItems.ten}}
+		</div>
+	</section>
+	<section class="service-group">
+		<div class="service-intro">
+			{{>atoms-heading-h2}}
+			{{>atoms-paragraph}}
+		</div>
+		<div class="service-list">
+			{{# listItems.six}}
+				{{>molecules-service-unit}}
+			{{/ listItems.six}}
+		</div>
+	</section>
+	<section class="service-group">
+		<div class="service-intro">
+			{{>atoms-heading-h2}}
+			{{>atoms-paragraph}}
+		</div>
+		<div class="service-list">
+			{{# listItems.six}}
+				{{>molecules-service-unit}}
+			{{/ listItems.six}}
+		</div>
+	</section>
+</div>
 {{>organisms-footer }}
