--- a/styleguide/source/_patterns/02-organisms/00-global/02-footer-features.mustache
+++ b/styleguide/source/_patterns/02-organisms/00-global/02-footer-features.mustache
@@ -1,6 +1,6 @@
 <section class="footer-features">
 	<div class="container">
-		{{>molecules-specialty-spotlight}}
+		{{>molecules-did-you-know}}
 		{{>molecules-featured-pet}}
 		{{>molecules-previously-featured-pets}}
 	</div>
