--- a/styleguide/source/_patterns/03-templates/03-doctors/00-doctors-landing.mustache
+++ b/styleguide/source/_patterns/03-templates/03-doctors/00-doctors-landing.mustache
@@ -1,3 +1,10 @@
 {{> organisms-header }}
-
+<div class="container">
+	<section class="doctor-list">
+		{{# listItems.twelve}}
+			{{>molecules-doctor-unit}}
+		{{/ listItems.twelve}}
+	</section>
+</div>
+{{>organisms-thankyou-carousel }}
 {{>organisms-footer }}
