add wireframes through "Doctor" section
Signed-off-by: Matt Lee <matthewleedesign@gmail.com>

--- a/styleguide/source/_patterns/01-molecules/09-doctors/00-doctor-unit.mustache
+++ b/styleguide/source/_patterns/01-molecules/09-doctors/00-doctor-unit.mustache
@@ -1,6 +1,6 @@
 <div class="doctor-unit">
     <a href="#">
         {{>atoms-image-square}}
-        <p class="doctor-unit-text">{{name.first}} {{name.last}}<br>{{jobTitle}}</p>
+        <p class="doctor-unit-text">{{>molecules-doctor-name-title}}</p>
     </a>
 </div>
