--- a/styleguide/source/_patterns/03-templates/01-about/02-tour.mustache
+++ b/styleguide/source/_patterns/03-templates/01-about/02-tour.mustache
@@ -1,4 +1,14 @@
 {{> organisms-header }}
-
+<div class="container">
+	<section class="sidebar">
+		{{>molecules-sidebar-nav}}
+	</section>
+	<section class="primary clear-none">
+		{{>organisms-tour-carousel}}
+	</section>
+	<section class="sidebar">
+		{{>molecules-sidebar-form}}
+	</section>
+</div>
 {{>organisms-thankyou-carousel }}
 {{>organisms-footer }}
