--- a/styleguide/source/_patterns/03-templates/02-services/01-services-detail.mustache
+++ b/styleguide/source/_patterns/03-templates/02-services/01-services-detail.mustache
@@ -1,3 +1,22 @@
 {{> organisms-header }}
-
+	<div class="container">
+		<section class="primary">
+			{{>molecules-breadcrumbs}}
+			<h2>{{service}}</h2>
+			{{>atoms-paragraph}}
+			<h3>{{subService}}</h3>
+			{{>atoms-paragraph}}
+			<h3>{{subService}}</h3>
+			{{>atoms-paragraph}}
+			<h3>{{subService}}</h3>
+			{{>atoms-paragraph}}
+			<h3>{{subService}}</h3>
+			{{>atoms-paragraph}}
+		</section>
+		<section class="sidebar">
+			{{>molecules-sidebar-doctor-nav}}
+			{{>molecules-sidebar-appointment-times}}
+		</section>
+	</div>
+{{>organisms-services-carousel }}
 {{>organisms-footer }}
