--- a/styleguide/source/css/style.scss
+++ b/styleguide/source/css/style.scss
@@ -20,6 +20,7 @@
 /* reusable patterns: typography levels, images, figures, tags, social media icons, notifications, etc. */
 @import "patterns/animations";
 @import "patterns/breadcrumbs";
+@import "patterns/carousels";
 @import "patterns/forms";
 @import "patterns/links";
 @import "patterns/media";
