--- a/styleguide/source/_patterns/01-molecules/06-highlight-boxes/00-highlight-box.mustache
+++ b/styleguide/source/_patterns/01-molecules/06-highlight-boxes/00-highlight-box.mustache
@@ -1,5 +1,5 @@
 <div class="highlight-box">
-	{{>atoms-heading-h3}}
+	<h3><a href="{{url}}">History</a></h3>
 	{{>atoms-paragraph}}
-	<p><a href="{{url}}">Read More</a></p>
+	<p><a href="{{url}}" class="button-link">Read more</a></p>
 </div>
