--- a/styleguide/source/_patterns/00-atoms/00-meta/_01-foot.mustache
+++ b/styleguide/source/_patterns/00-atoms/00-meta/_01-foot.mustache
@@ -2,19 +2,40 @@
 	<!--DO NOT REMOVE-->
 	{% pattern-lab-foot %}
 
-		<script src="../../js/jquery-2.0.0b2.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+		<script>window.jQuery || document.write('<script src="../../js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
 
-		<script src="../js/hickoryvet.min.js"></script>
-
-		<!--
 		<script>
+		/*
 			if (typeof jQuery != 'undefined') {		 
 			    alert("jQuery library is loaded!");
 			}else{
 			    alert("jQuery library is not found!");		 
 			}
-		</script>
-		-->
+		*/
 
+
+		/* Topics toggle */
+
+		$(document).ready(function() {
+		    $('.toggle .toggle-trigger').each(function() {
+		        var tis = $(this), state = false, toggleTarget = tis.next('.toggle-target').slideUp(), expand = $('.filtering .topics .expand'), collapse = $('.filtering .topics .collapse');
+		        tis.click(function() {
+		            state = !state;
+		            toggleTarget.slideToggle(state);
+		            tis.toggleClass('active',state);
+		        });
+		        expand.click(function() {
+		            toggleTarget.slideDown();
+		            $('.toggle-trigger').addClass('active');
+		        });
+		        collapse.click(function() {
+		            toggleTarget.slideUp();
+		            $('.toggle-trigger').removeClass('active');
+		        });
+		    });
+		});
+
+		</script>
 	</body>
 </html>
