--- a/styleguide/source/css/styleguide-specific.css
+++ b/styleguide/source/css/styleguide-specific.css
@@ -108,6 +108,131 @@ Typographic variables
 Modular Scale variables
 ////////////////////////////////////////////////////////////////////////////
 */
+@media (min-width: 48em) {
+  /* line 2, lib/_grid-classes.scss */
+  .column6 {
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    display: inline;
+    float: left;
+    width: 48.25%;
+    margin-right: 3.5%;
+    margin-left: 0;
+  }
+  /* line 58, lib/_grid-bearded.scss */
+  .column6:nth-of-type(1n) {
+    margin-right: 3.5%;
+    float: left;
+    clear: none;
+  }
+  /* line 60, lib/_grid-bearded.scss */
+  .lt-ie8 .column6:nth-of-type(1n) {
+    margin-right: 3.25%;
+  }
+  /* line 66, lib/_grid-bearded.scss */
+  .column6:nth-of-type(2n+2) {
+    margin-right: 0;
+    float: right;
+  }
+  /* line 70, lib/_grid-bearded.scss */
+  .column6:nth-of-type(2n+3) {
+    clear: both;
+  }
+
+  /* line 6, lib/_grid-classes.scss */
+  .column4 {
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    display: inline;
+    float: left;
+    width: 31%;
+    margin-right: 3.5%;
+    margin-left: 0;
+  }
+  /* line 76, lib/_grid-bearded.scss */
+  .column4:nth-of-type(1n) {
+    margin-right: 3.5%;
+    float: left;
+    clear: none;
+  }
+  /* line 78, lib/_grid-bearded.scss */
+  .lt-ie8 .column4:nth-of-type(1n) {
+    margin-right: 3.25%;
+  }
+  /* line 84, lib/_grid-bearded.scss */
+  .column4:nth-of-type(3n+3) {
+    margin-right: 0;
+    float: right;
+  }
+  /* line 88, lib/_grid-bearded.scss */
+  .column4:nth-of-type(3n+4) {
+    clear: both;
+  }
+
+  /* line 10, lib/_grid-classes.scss */
+  .column3 {
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    display: inline;
+    float: left;
+    width: 22.375%;
+    margin-right: 3.5%;
+    margin-left: 0;
+  }
+  /* line 94, lib/_grid-bearded.scss */
+  .column3:nth-of-type(1n) {
+    margin-right: 3.5%;
+    float: left;
+    clear: none;
+  }
+  /* line 96, lib/_grid-bearded.scss */
+  .lt-ie8 .column3:nth-of-type(1n) {
+    margin-right: 3.25%;
+  }
+  /* line 102, lib/_grid-bearded.scss */
+  .column3:nth-of-type(4n+4) {
+    margin-right: 0;
+    float: right;
+  }
+  /* line 106, lib/_grid-bearded.scss */
+  .column3:nth-of-type(4n+5) {
+    clear: both;
+  }
+
+  /* line 14, lib/_grid-classes.scss */
+  .column2 {
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    display: inline;
+    float: left;
+    width: 13.75%;
+    margin-right: 3.5%;
+    margin-left: 0;
+  }
+  /* line 112, lib/_grid-bearded.scss */
+  .column2:nth-of-type(1n) {
+    margin-right: 3.5%;
+    float: left;
+    clear: none;
+  }
+  /* line 114, lib/_grid-bearded.scss */
+  .lt-ie8 .column2:nth-of-type(1n) {
+    margin-right: 3.25%;
+  }
+  /* line 120, lib/_grid-bearded.scss */
+  .column2:nth-of-type(6n+6) {
+    margin-right: 0;
+    float: right;
+  }
+  /* line 124, lib/_grid-bearded.scss */
+  .column2:nth-of-type(6n+7) {
+    clear: both;
+  }
+}
 /* 
 ////////////////////////////////////////////////////////////////////////////
 Typographic mixins and extends
@@ -456,31 +581,37 @@ select, input[type="select"] {
   */
 }
 
-/* line 104, patterns/_forms.scss */
+/* line 98, patterns/_forms.scss */
 .field-container {
   margin-bottom: 1rem;
 }
 
+/* line 104, patterns/_forms.scss */
+fieldset.checkboxes li {
+  display: inline-block;
+  margin-right: 1em;
+}
+
 /* set input placeholder color to text color */
-/* line 111, patterns/_forms.scss */
+/* line 114, patterns/_forms.scss */
 ::-webkit-input-placeholder {
   color: #bfbfbf;
   vertical-align: top;
 }
 
-/* line 115, patterns/_forms.scss */
+/* line 118, patterns/_forms.scss */
 ::-moz-placeholder {
   color: #bfbfbf;
   vertical-align: top;
 }
 
-/* line 119, patterns/_forms.scss */
+/* line 122, patterns/_forms.scss */
 :-ms-input-placeholder {
   color: #bfbfbf;
   vertical-align: top;
 }
 
-/* line 123, patterns/_forms.scss */
+/* line 126, patterns/_forms.scss */
 :-moz-placeholder {
   color: #bfbfbf;
   vertical-align: top;
@@ -1011,6 +1142,103 @@ This query will take effect for any screen smaller than 1024px
 .tag-label {
   float: left;
   margin-right: .25em;
+}
+
+/* line 1, patterns/_toggle.scss */
+.js {
+  /* only works if javascript is present */
+}
+@media (min-width: 48em) {
+  /* line 2, patterns/_toggle.scss */
+  .js .toggle {
+    padding-left: 25px;
+    /* provides margin clearance for toggle arrow */
+  }
+}
+@media (min-width: 64em) {
+  /* line 2, patterns/_toggle.scss */
+  .js .toggle {
+    padding-left: 0;
+  }
+}
+/* line 15, patterns/_toggle.scss */
+.js .toggle-trigger {
+  position: relative;
+  padding: 1em 0;
+}
+/* line 19, patterns/_toggle.scss */
+.js .toggle-trigger:before {
+  content: '';
+  width: 20px;
+  height: 20px;
+  position: absolute;
+  top: 1.5rem;
+  left: -25px;
+  -moz-transition-property: all;
+  -o-transition-property: all;
+  -webkit-transition-property: all;
+  transition-property: all;
+  -moz-transition-duration: 0.25s;
+  -o-transition-duration: 0.25s;
+  -webkit-transition-duration: 0.25s;
+  transition-duration: 0.25s;
+  -moz-transition-timing-function: ease-in-out;
+  -o-transition-timing-function: ease-in-out;
+  -webkit-transition-timing-function: ease-in-out;
+  transition-timing-function: ease-in-out;
+}
+@media (min-width: 37.5em) {
+  /* line 19, patterns/_toggle.scss */
+  .js .toggle-trigger:before {
+    background: url(../img/arrow-forward.png) center center no-repeat;
+    background-size: 9px 20px;
+  }
+}
+@media (min-width: 87.5em) {
+  /* line 19, patterns/_toggle.scss */
+  .js .toggle-trigger:before {
+    left: -30px;
+  }
+}
+/* line 38, patterns/_toggle.scss */
+.js .toggle-trigger:hover {
+  cursor: pointer;
+}
+/* line 40, patterns/_toggle.scss */
+.js .toggle-trigger:hover h2 {
+  color: green;
+}
+/* line 45, patterns/_toggle.scss */
+.js .toggle-trigger.active:before {
+  -moz-transform: rotate(90deg);
+  -ms-transform: rotate(90deg);
+  -webkit-transform: rotate(90deg);
+  transform: rotate(90deg);
+}
+/* line 49, patterns/_toggle.scss */
+.js .toggle-trigger p {
+  margin: 0;
+}
+/* line 53, patterns/_toggle.scss */
+.js .toggle-trigger h2, .js .toggle-trigger h4, .js .toggle-trigger h4 {
+  -moz-transition-property: all;
+  -o-transition-property: all;
+  -webkit-transition-property: all;
+  transition-property: all;
+  -moz-transition-duration: 0.25s;
+  -o-transition-duration: 0.25s;
+  -webkit-transition-duration: 0.25s;
+  transition-duration: 0.25s;
+  -moz-transition-timing-function: ease-in-out;
+  -o-transition-timing-function: ease-in-out;
+  -webkit-transition-timing-function: ease-in-out;
+  transition-timing-function: ease-in-out;
+  margin-bottom: 0;
+  /* prevents funny bounce on toggle */
+}
+/* line 59, patterns/_toggle.scss */
+.js .toggle-target {
+  display: none;
 }
 
 /* 
