complete wires through News Landing template
Signed-off-by: Matt Lee <matthewleedesign@gmail.com>

--- a/styleguide/source/_patterns/00-atoms/03-lists/04-tag-list.mustache
+++ b/styleguide/source/_patterns/00-atoms/03-lists/04-tag-list.mustache
@@ -1,5 +1,5 @@
 <ul class="tags">
-	{{#listItems.four}}
+	{{#listItems.three}}
 	    <li><a href="{{ url }}">Test Tag</a></li>
-	{{/listItems.four}}
+	{{/listItems.three}}
 </ul>
