--- a/styleguide/source/_patterns/01-molecules/05-navigation/05-pagination.mustache
+++ b/styleguide/source/_patterns/01-molecules/05-navigation/05-pagination.mustache
@@ -1,4 +1,4 @@
-<ol class="pagination">
+<ul class="pagination">
 	<li><a class="previous" href="{{ url }}">< Prev</a></li>
 	<li class="current"><a href="{{ url }}">1</a></li>
 	<li><a href="{{ url }}">2</a></li>
@@ -8,4 +8,4 @@
 	<li><a href="{{ url }}">6</a></li>
 	<li><a href="{{ url }}">7</a></li>
 	<li><a class="next" href="{{ url }}">Next ></a></li>
-</ol>
+</ul>
