--- a/styleguide/source/_patterns/01-molecules/12-thankyou/00-thankyou-quote.mustache
+++ b/styleguide/source/_patterns/01-molecules/12-thankyou/00-thankyou-quote.mustache
@@ -1,4 +1,4 @@
 <blockquote class="thankyou-quote">
 	<p>Thank you for your extraordinary staff. They saved my cat’s life, and I am forever grateful for it.</p>
-	<cite>{{owner.name}} {{owner.name}} and {{pet.name}}</cite>
+	<cite>{{owner.name}} {{owner.last}} and {{pet.name}}</cite>
 </blockquote>
