--- a/styleguide/source/_patterns/03-templates/04-pet-owners/02-success-stories-landing.mustache
+++ b/styleguide/source/_patterns/03-templates/04-pet-owners/02-success-stories-landing.mustache
@@ -1,4 +1,19 @@
 {{> organisms-header }}
-
+<div class="container">
+	<section class="primary">
+		{{>molecules-breadcrumbs}}
+		{{>atoms-heading-h2}}
+		{{>atoms-paragraph}}
+		<section class="pet-list">
+			{{# listItems.twelve}}
+				{{>molecules-pet-unit}}
+			{{/ listItems.twelve}}
+		</section>
+	</section>
+	<section class="sidebar">
+		{{>molecules-sidebar-nav}}
+		{{>molecules-sidebar-form}}
+	</section>
+</div>
 {{>organisms-thankyou-carousel }}
 {{>organisms-footer }}
