--- a/styleguide/source/_patterns/03-templates/05-news/00-news-landing.mustache
+++ b/styleguide/source/_patterns/03-templates/05-news/00-news-landing.mustache
@@ -1,3 +1,16 @@
 {{> organisms-header }}
-
+{{>atoms-image-panoramic-extra}}
+<div class="container">
+	<section class="primary">
+		{{>organisms-news-preview-list}}
+		{{>molecules-pagination}}
+	</section>
+	<section class="sidebar">
+		{{>molecules-sidebar-form}}
+		{{>molecules-sidebar-nav}}
+		{{>molecules-sidebar-select}}
+		{{>molecules-sidebar-form}}
+		{{>molecules-sidebar-select}}
+	</section>
+</div>
 {{>organisms-footer }}
