--- a/styleguide/source/css/style.scss
+++ b/styleguide/source/css/style.scss
@@ -44,6 +44,8 @@
 @import "layout/thankyou";
 @import "layout/services";
 @import "layout/doctors";
+@import "layout/pets";
+@import "layout/news";
 
 /* individual components, usually from Bower*/
 // @import "plugins/owl-carousel-base";
