--- a/styleguide/source/_patterns/03-templates/04-pet-owners/03-success-stories-detail.mustache
+++ b/styleguide/source/_patterns/03-templates/04-pet-owners/03-success-stories-detail.mustache
@@ -1,3 +1,15 @@
 {{> organisms-header }}
-
+<div class="container">
+	<section class="primary">
+		{{>molecules-breadcrumbs}}
+		{{>molecules-figure-with-caption}}
+		{{>organisms-body-text}}
+	</section>
+	<section class="sidebar">
+		{{>molecules-sidebar-nav}}
+		{{>molecules-sidebar-nav}}
+		{{>molecules-sidebar-form}}
+	</section>
+</div>
+{{>organisms-pet-carousel }}
 {{>organisms-footer }}
