--- a/styleguide/source/css/patterns/_toggle.scss
+++ b/styleguide/source/css/patterns/_toggle.scss
@@ -17,7 +17,8 @@
 
 	&:before {
 		content: '+';
-		float: left;
+		position: absolute;
+		left: 0;
 	}
 
 	&:hover {
@@ -43,6 +44,7 @@
 
 .toggle-target {
 	display: none;
+	padding: 0 0 1em 1em;
 
 	> * {
 		margin: 0;
